# OriSpark

./: .env.example  .gitignore  Makefile  OriStudio.spec  docker-compose.yml  package-lock.json  start.sh  test_etsy_temp.db
backend/: Dockerfile  OriStudio.spec  alembic.ini  pyproject.toml  requirements.txt  seed_public_api.py
backend/.omc/: project-memory.json
backend/.omc/state/: agent-replay-78452f71-f492-4115-bdce-7ff3d44decdf.jsonl  agent-replay-c8e99c09-fa40-4935-bd10-2b0b320cd15c.jsonl  (+2 more)
backend/alembic/: env.py
backend/app/: __init__.py  config.py  database.py  deps.py  main.py  mcp_server.py
backend/data/: oristudio.db-shm  oristudio.db-wal  pre_restore_20260612_063437.db  pre_restore_20260703_075902.db  pre_restore_20260708_032402.db
backend/tests/: __init__.py  conftest.py  test_ai_generate.py  test_ai_training.py  test_auth.py  test_c2pa_did_vc.py  test_capability.py  test_case_study.py  test_commission.py  test_contract.py  test_contract_risk.py  test_copyright_guide.py  test_credit.py  test_e2e_workflow.py  test_enforcement.py  test_enforcement_roi.py  test_etsy_service.py  test_invoice.py  test_ipr_p24.py  test_listing.py  test_matching_engine.py  test_matchmaking.py  test_monitor.py  test_monitor_p23.py  test_multi_market.py  test_navigation.py  test_notary.py  test_p1_integration.py  test_p2_fork_merge.py  test_p2_mcp_client.py  test_p2_scr.py  test_p3_boundary.py  test_p3_edge_cases.py  test_p3_workflow_integration.py  test_pdh.py  test_photographer.py  test_private_traffic.py  test_publish.py  test_revenue.py  test_reverse_trace.py  (+10 more)
(+1035 files in other folders)
